<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenu" >

    <Button
        android:id="@+id/start_new_walk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/view_previous_walks"
        android:layout_alignLeft="@+id/view_previous_walks"
        android:onClick="startWalkSetupScreen"
        android:text="@string/start_new_walk" />

    <Button
        android:id="@+id/view_previous_walks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="startMyWalksScreen"
        android:text="@string/view_previous_walks" />

    <Button
        android:id="@+id/open_options_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/view_previous_walks"
        android:layout_alignRight="@+id/view_previous_walks"
        android:layout_below="@+id/view_previous_walks"
        android:onClick="startOptionsScreen"
        android:text="@string/open_options_screen" />

</RelativeLayout>
